# job-scraper

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
datascraper/: asgi.py  documents.py  models.py  settings.py  urls.py  views.py  wsgi.py
datascraper/management/commands/: adzuna.py  google.py  greenhouse.py  locations.py  myworkday.py  remotive.py  skills.py  usajobs.py
datascraper/migrations/: 0001_initial.py  0002_jobposting_location.py  0003_alter_jobposting_published_at.py  0004_company_api_link.py  0005_company_vendor.py  0006_jobposting_description.py  0007_country_state.py  0008_company_crawled_at.py  0009_alter_jobposting_vendor_job_id.py  0010_jobposting_is_usa.py  0011_jobposting_is_hybrid_jobposting_is_remote.py  0012_city.py  0013_jobposting_state.py  0014_remove_jobposting_programming_languages_and_more.py  0015_alter_jobposting_skills.py  0016_skill.py
datascraper/services/api/: adzunaapi.py  googlecompanysearch.py  greenhouseapi.py  myworkdayapi.py  remotiveapi.py
datascraper/services/http/: httpthreading.py
datascraper/services/models/: jobpostingwriter.py
datascraper/services/parser/: companyhtmlparser.py  countryparser.py  htmlparser.py  stringextracter.py
datascraper/templates/datascraper/: base.html  index.html
datascraper/util/: formattedjobposting.py
elastic-start-local/: .env.dist  docker-compose.yml  start.sh
