[tool.poetry]
name = "job-scraper"
version = "1.0.0"
requires-poetry = ">=2.0"
description = "A web application for generating qr codess"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "^2.32.0"
node-semver = "^0.8.1"
django = "^4.2.22"
djangorestframework = "^3.14.0"
djangorestframework-recursive = "^0.1.2"
django-redis = "^5.4.0"
qrcode = "^8.0"
pillow = "^11.3.0"
psycopg2-binary = "^2.9.10"
serverless-wsgi = "^3.0.5"
zappa = "^0.59.0"
boto3 = "^1.37.17"
django-storages = "^1.14.5"
beautifulsoup4 = "^4.13.4"
django-admin = "^2.0.2"
urllib3 = "^2.5.0"
dateparser = "^1.2.1"
django-elasticsearch-dsl = "^8.0"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"
pyap = "^0.3.1"
nltk = "^3.9.1"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
spacey = "^0.1.1"
nlp = "^0.4.0"
spacy = "^3.8.7"
rapidfuzz = "^3.13.0"
lxml = "^6.0.0"
parsel = "^1.10.0"
html2text = "^2025.4.15"
html5lib = "^1.1"
skillner = "^1.0.3"
ipython = "^9.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "qrcoder.settings"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
